@@ -14,6 +14,7 @@ export(aggregateReference)
 export(classifySingleR)
 export(combineCommonResults)
 export(combineRecomputedResults)
+export(configureMarkerHeatmap)
 export(getClassicMarkers)
 export(getDeltaFromMedian)
 export(matchReferences)
